2011-07-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Implemented CFCalendarAddComponents() and
	CFCalendarDecomposeAbsoluteTime().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Implemented a few more functions.
	* Source/CFString.c: Fixed bug in CFStringPad().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Fixed string hashing and implemented
	CFStringGetRangeOfComposedCharactersAtIndex().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/CFRuntime.m: Add bridging function.
	* Source/CFString.c: Bridge NSCFString with CFString types.

2011-07-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/CFRuntime.m: Minor fixes to ObjC interface.
	* Source/CFString.c: Add ObjC dispatch to CFStringGetCharacters().

2011-07-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h: Add Objective-C runtime interface.
	* Source/CFRuntime.m: Moved private functions to objc_interface.h.
	* Source/CFString.c: First steps towards toll-free bridged objects.

2011-07-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Added implementation for
	CFCalendarGetMaximumRangeOfUnit and CFCalendarGetMinimumRangeOfUnit.

2011-07-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDate.m:
	* Source/CFDate.c:
	* Source/GNUmakefile:
	* Headers/CoreFoundation/CFDate.h: Make CFDate a C file.  Will use
	CFCalendar and ICU functions to implement this functionality.
	* Source/CFLocale.c: Fix a few bugs found when testing CFCalendar.
	* Source/Identifiers.m: Add ISO8601 calendar identifier.
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Started implementing CFCalendar.

2011-06-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented CFStringCreateWithBytesNoCopy() and
	fixed a bug in CFStringCreateByCombiningStrings().

2011-06-26 Stefan Bidigaray <stefanbidi@gmail.com>
